//
// Copyright 2019 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

import "oak_services/proto/grpc_invocation.proto";
import "oak_services/proto/log.proto";
import "proto/handle.proto";

package oak.examples.hello_world;

// Init message for the handler Node, used only internally.
message Init {
  oak.handle.Sender log_sender = 1 [(oak.handle.message_type) = ".oak.log.LogMessage"];
  oak.handle.Sender translator_sender = 2
      [(oak.handle.message_type) = ".oak.invocation.GrpcInvocation"];
}
